--- a/webapp/index.html
+++ b/webapp/index.html
@@ -92,7 +92,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <a href="#" class="nav-link active">
                 <i class="nav-icon fa fa-dashboard"></i>
                 <p>
-                  Starter Pages
+                  Plants
                   <i class="right fa fa-angle-left"></i>
                 </p>
               </a>
@@ -134,7 +134,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1 class="m-0 text-dark">Starter Page</h1>
+              <h1 class="m-0 text-dark">Dashboard</h1>
             </div>
             <!-- /.col -->
             <div class="col-sm-6">
@@ -142,7 +142,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <li class="breadcrumb-item">
                   <a href="#">Home</a>
                 </li>
-                <li class="breadcrumb-item active">Starter Page</li>
+                <li class="breadcrumb-item active">Komkommer</li>
               </ol>
             </div>
             <!-- /.col -->
@@ -160,9 +160,22 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="col-lg-3 col-6">
               <div class="small-box bg-info">
                 <div class="inner">
-                  <h3>{{currentmoistlvl[0].moistlvl}}</h3>
+                  <h3>{{currentmoisture[0].moistlvl}}</h3>
 
                   <p>Current moist level</p>
+                </div>
+                <div class="icon">
+                  <i class="ion ion-bag"></i>
+                </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-3 col-6">
+              <div class="small-box bg-info">
+                <div class="inner">
+                  <h3>{{lasttimefed[0].feedtimes}}</h3>
+
+                  <p>times fed on {{lasttimefed[0].timestamp}}</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-bag"></i>
@@ -176,87 +189,61 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Moisture Graph</h5>
 
                   <p class="card-text">
                     <ul>
-                      <li v-for="row in feedrows">{{row.moistlvl}}</li>
+                      <li v-for="row in measurerows">{{row.moistlvl}}</li>
                     </ul>
                   </p>
-
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-                </div>
-              </div>
-
-              <div class="card card-primary card-outline">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
                 </div>
               </div>
               <!-- /.card -->
             </div>
             <!-- /.col-md-6 -->
             <div class="col-lg-6">
-              <div class="card">
-                <div class="card-header">
-                  <h5 class="m-0">Featured</h5>
-                </div>
-                <div class="card-body">
-                  <h6 class="card-title">Special title treatment</h6>
-
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-
               <div class="card card-primary card-outline">
-                <div class="card-header">
-                  <h5 class="m-0">Featured</h5>
-                </div>
                 <div class="card-body">
-                  <h6 class="card-title">Special title treatment</h6>
+                  <h5 class="card-title">Last 10 fed times</h5>
 
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <ul>
+                    <li v-for="feed in feedrows">On {{feed.timestamp}} komkommer was fed {{feed.feedtimes}} times.</li>
+                  </ul>
+                  <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a>
                 </div>
               </div>
             </div>
-            <!-- /.col-md-6 -->
           </div>
-          <!-- /.row -->
+          <!-- /.col-md-6 -->
         </div>
-        <!-- /.container-fluid -->
+        <!-- /.row -->
       </div>
-      <!-- /.content -->
+      <!-- /.container-fluid -->
     </div>
-    <!-- /.content-wrapper -->
+    <!-- /.content -->
+  </div>
+  <!-- /.content-wrapper -->
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-      <div class="p-3">
-        <h5>Title</h5>
-        <p>Sidebar content</p>
-      </div>
-    </aside>
-    <!-- /.control-sidebar -->
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+    <div class="p-3">
+      <h5>Title</h5>
+      <p>Sidebar content</p>
+    </div>
+  </aside>
+  <!-- /.control-sidebar -->
 
-    <!-- Main Footer -->
-    <footer class="main-footer">
-      <!-- To the right -->
-      <div class="float-right d-none d-sm-inline">
-        PlantProject
-      </div>
-      <!-- Default to the left -->
-      <strong>Copyright &copy; 2018 Geert Rademakers
-    </footer>
+  <!-- Main Footer -->
+  <footer class="main-footer">
+    <!-- To the right -->
+    <div class="float-right d-none d-sm-inline">
+      PlantProject
+    </div>
+    <!-- Default to the left -->
+    <strong>Copyright &copy; 2018 Geert Rademakers
+  </footer>
   </div>
   <!-- ./wrapper -->
 
@@ -285,8 +272,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
     const app = new Vue({
       el: "#app",
       firebase: {
-        feedrows: db.ref('plants/komkommer/measurerows').limitToLast(10),
-        currentmoistlvl: db.ref('plants/komkommer/measurerows').limitToLast(1)
+        measurerows: db.ref('plants/komkommer/measurerows').limitToLast(10),
+        currentmoisture: db.ref('plants/komkommer/measurerows').limitToLast(1),
+        lasttimefed: db.ref('plants/komkommer/feedrows').limitToLast(1),
+        plants: db.ref('plants'),
+        feedrows: db.ref('plants/komkommer/feedrows').limitToLast(10),
       },
       data: {
         firstvar: "kekl"
