--- a/webapp/index.html
+++ b/webapp/index.html
@@ -192,6 +192,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <h5 class="card-title">Moisture Graph</h5>
 
                   <p class="card-text">
+                    <canvas id="moistChart">
+                      
+                    </canvas>
                     <ul>
                       <li v-for="row in measurerows">{{row.moistlvl}}</li>
                     </ul>
@@ -258,6 +261,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="dist/js/vue.js"></script>
   <script src="dist/js/firebase.js"></script>
   <script src="dist/js/vuefire.js"></script>
+  <!-- ChartJS 1.0.1 -->
+<script src="plugins/chartjs-old/Chart.min.js"></script>
   <script>
     var fbconfig = {
       apiKey: "AIzaSyD2nWw3IaNHwnqzYezm8Zc5yK1ld25n3sA",
@@ -281,7 +286,52 @@ scratch. This page gets rid of all links and provides the needed markup only.
       data: {
         firstvar: "kekl"
       }
-    });  
+    });
+
+    var lineChartOptions = {
+      //Boolean - If we should show the scale at all
+      showScale               : true,
+      //Boolean - Whether grid lines are shown across the chart
+      scaleShowGridLines      : false,
+      //String - Colour of the grid lines
+      scaleGridLineColor      : 'rgba(0,0,0,.05)',
+      //Number - Width of the grid lines
+      scaleGridLineWidth      : 1,
+      //Boolean - Whether to show horizontal lines (except X axis)
+      scaleShowHorizontalLines: true,
+      //Boolean - Whether to show vertical lines (except Y axis)
+      scaleShowVerticalLines  : true,
+      //Boolean - Whether the line is curved between points
+      bezierCurve             : true,
+      //Number - Tension of the bezier curve between points
+      bezierCurveTension      : 0.3,
+      //Boolean - Whether to show a dot for each point
+      pointDot                : false,
+      //Number - Radius of each point dot in pixels
+      pointDotRadius          : 4,
+      //Number - Pixel width of point dot stroke
+      pointDotStrokeWidth     : 1,
+      //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
+      pointHitDetectionRadius : 20,
+      //Boolean - Whether to show a stroke for datasets
+      datasetStroke           : true,
+      //Number - Pixel width of dataset stroke
+      datasetStrokeWidth      : 2,
+      //Boolean - Whether to fill the dataset with a color
+      datasetFill             : true,
+      //String - A legend template
+      legendTemplate          : '<ul class="<%=name.toLowerCase()%>-legend"><% for (var i=0; i<datasets.length; i++){%><li><span style="background-color:<%=datasets[i].lineColor%>"></span><%if(datasets[i].label){%><%=datasets[i].label%><%}%></li><%}%></ul>',
+      //Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
+      maintainAspectRatio     : true,
+      //Boolean - whether to make the chart responsive to window resizing
+      responsive              : true
+    }
+    var lineChartCanvas = $('#moistChart').get(0).getContext('2d');
+    var lineChart = new Chart(lineChartCanvas);
+    lineChartOptions.datasetFill = false;
+    lineChart.Line(measurerows, lineChartOptions);
+    console.log(firstvar);
+  
   </script>
 </body>
 
